--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name":"app",
+  "name": "app",
   "version": "1.0.0",
   "scripts": {
     "start": "gulp startLocal --continueAfterTestError --speedupLocalDev",
@@ -26,9 +26,7 @@
     "clipboard": "^1.7.1",
     "cssnano": "^3.10.0",
     "del": "^2.2.2",
-        "exports-loader": "^0.7.0",
-    
-
+    "exports-loader": "^0.7.0",
     "gulp": "^4.0.0",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-cached": "^1.1.1",
@@ -39,7 +37,8 @@
     "gulp-inject": "^4.2.0",
     "gulp-livingcss": "^2.1.0",
     "gulp-postcss": "^6.3.0",
-    "gulp-sass": "^4.0.0",
+    "gulp-sass": "^5.1.0",
+    "sass": "^1.55.0",
     "gulp-sourcemaps": "^2.4.1",
     "html-loader": "^0.5.5",
     "imports-loader": "^0.8.0",
@@ -60,5 +59,6 @@
     "ramda": "^0.23.0",
     "cargobay": "Kunstmaan/cargobay#0.8.6-support",
     "jquery": "^3.1.1",
-    "velocity-animate": "1.2.3"  }
+    "velocity-animate": "1.2.3"
+  }
 }
