--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -27,6 +27,7 @@ security:
             logout:
                 path: kunstmaan_admin_logout
                 target: KunstmaanAdminBundle_homepage
+                handlers: ['kunstmaan_multi_domain.host_override_cleanup']
             remember_me:
                 secret:   "%kernel.secret%"
                 lifetime: 604800
