--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,7 @@
 #index:
 #    path: /
 #    controller: App\Controller\DefaultController::index
+KunstmaanMultiDomainBundle:
+  resource: "@KunstmaanMultiDomainBundle/Resources/config/routing.yml"
+  requirements:
+    _locale: "%requiredlocales%"
