--- a/config/packages/kunstmaan_translator.yaml
+++ b/config/packages/kunstmaan_translator.yaml
@@ -1,4 +1,4 @@
 kunstmaan_translator:
     enabled: true
     # Add your preferred locales here
-    managed_locales: ['nl', 'en', 'de', 'fr']
+    managed_locales: ['en', 'de']
