--- a/config/packages/kunstmaan_admin.yaml
+++ b/config/packages/kunstmaan_admin.yaml
@@ -1,6 +1,6 @@
 kunstmaan_admin:
     multi_language: true
-    required_locales: nl|fr|en
+    required_locales: de|en
     default_locale: en
     admin_locales: ['en']
     website_title: 'MyProject' #Rename this to your website name
